--- a/Calendario/calendario.html
+++ b/Calendario/calendario.html
@@ -10,7 +10,7 @@
 
     <body class="text-center">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html">Co.ca Archivio</a>
+            <a class="navbar-brand" href="index.html"><strong>Co.ca Archivio</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
