--- a/Resoconti/resoconti_2018_2019.html
+++ b/Resoconti/resoconti_2018_2019.html
@@ -12,7 +12,7 @@
 
     <body class="text-center">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="../index.html">Co.ca Archivio</a>
+            <a class="navbar-brand" href="../index.html"><strong>Co.ca Archivio</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -23,7 +23,7 @@
                   <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Calendario</a>
+                  <a class="nav-link" href="../Calendario/calendario.html">Calendario</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../Resoconti/pagina_Resoconti.html">Reseconti</a>
