--- a/Resoconti/resoconti_2017_2018.html
+++ b/Resoconti/resoconti_2017_2018.html
@@ -70,7 +70,7 @@
                                     <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#quattordici" role="tab" aria-controls="settings">04/04/2018</a>
                                     <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#quindici" role="tab" aria-controls="settings">16/04/2018</a>
                                     <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#sedici" role="tab" aria-controls="settings">23/04/2018</a>
-                                    <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#diciasette" role="tab" aria-controls="settings">07/05/2018\</a>
+                                    <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#diciasette" role="tab" aria-controls="settings">07/05/2018</a>
                                     <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#diciotto" role="tab" aria-controls="settings">14/05/2018</a>
                                     <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#dicianove" role="tab" aria-controls="settings">28/05/2018</a>
                                     <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#venti" role="tab" aria-controls="settings">02/07/2018</a>
@@ -80,12 +80,12 @@
                                   <div class="tab-content" id="nav-tabContent">
                                     <div class="tab-pane fade show active" id="uno" role="tabpanel" aria-labelledby="list-home-list">
                                       <div class="list-group">
-                                        <a href="https://drive.google.com/file/d/1tXeX8Didng55nVqV3vbL8KG5GbdQ8T90/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto</a>
+                                        <a href="https://drive.google.com/file/d/1tXeX8Didng55nVqV3vbL8KG5GbdQ8T90/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 06/11/2017</a>
                                       </div>                                      
                                     </div>
                                     <div class="tab-pane fade" id="due" role="tabpanel" aria-labelledby="list-profile-list">
                                       <div class="list-group">
-                                        <a href="https://drive.google.com/file/d/1tXeX8Didng55nVqV3vbL8KG5GbdQ8T90/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto</a>                                    
+                                        <a href="https://drive.google.com/file/d/1tXeX8Didng55nVqV3vbL8KG5GbdQ8T90/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 20/11/2017</a>                                    
                                         <br>
                                         <a href="https://drive.google.com/file/d/1r6Gf9oEsWVGiT3wGJUGDpiXUq8n-66j1/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-success">Dove nasce Gesù oggi? - Libretto Veglia di Natale 2017</a>
                                       </div>                                     
@@ -101,8 +101,96 @@
                                     </div>
                                     <div class="tab-pane fade" id="quattro" role="tabpanel" aria-labelledby="list-settings-list">
                                       <div class="list-group">
-                                        <a href="https://drive.google.com/file/d/1tXeX8Didng55nVqV3vbL8KG5GbdQ8T90/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto</a>
-                                      </div>                                     
+                                        <a href="https://drive.google.com/file/d/1tXeX8Didng55nVqV3vbL8KG5GbdQ8T90/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 04/12/2017</a>
+                                      </div> 
+                                    </div>
+                                    <div class="tab-pane fade" id="cinque" role="tabpanel" aria-labelledby="list-settings-list">
+                                      <div class="list-group">
+                                        <a href="https://docs.google.com/document/d/16_Z5wXr6ZeYj0ACLH2wPFXa_1-AL6nnpBsnhTbcButw/edit?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 08/01/2018</a>
+                                        <br><a href="https://drive.google.com/file/d/1ZqB73q-7O5D9eYVUPD-XgFggXdPo31ZZ/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-danger">Scheda valutazione Marco Conti </a>
+                                        <br><a href="https://drive.google.com/file/d/1Hfy0mmqpabRdo00dvRb3onKajnU9MVdG/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-danger">Linee Guida PPU (Progressione Personale Unitaria) </a>
+                                      </div>                                        
+                                    </div>
+                                    <div class="tab-pane fade" id="sei" role="tabpanel" aria-labelledby="list-settings-list">
+                                      <div class="list-group">
+                                        <a href="https://docs.google.com/document/d/1_jwm4G3rtNwMm3uLgVg8bEvfStIt60ZLa-136hzpL-w/edit?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 30/01/2018</a>
+                                      </div> 
+                                    </div>
+                                    <div class="tab-pane fade" id="sette" role="tabpanel" aria-labelledby="list-settings-list">
+                                      <div class="list-group">
+                                        <a href="https://docs.google.com/document/d/1iNZWe9IINwfLhm2dn5Ld83SLvI8yRQ7pad1DpG9baFI/edit?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 05/02/2018</a>
+                                      </div> 
+                                    </div>
+                                    <div class="tab-pane fade" id="otto" role="tabpanel" aria-labelledby="list-settings-list">
+                                      <div class="list-group">
+                                        <a href="https://docs.google.com/document/d/1z8ygaFIAONEFkJUjRi6jHN5xV8zNliL8kMLLqIFfRlE/edit?usp=sharing"" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 12/02/2018</a>
+                                      </div>
+                                    </div>
+                                    <div class="tab-pane fade" id="nove" role="tabpanel" aria-labelledby="list-settings-list">
+                                      <div class="list-group">
+                                        <a href="https://docs.google.com/document/d/13qoQ0ffYu1edRE7kyyqQUCtKe7sSd4VMEXigkrVndl4/edit?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 27/02/2018</a>
+                                        <br><a href="https://drive.google.com/file/d/1_IVLfWunPSfyBrAxejXg9K1o_uIhkiyP/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-danger">Malattie spirituali</a>
+                                        <br><a href="https://drive.google.com/file/d/1ccooYoEHn-vFvDNE5TZHdDP9BXet4cbx/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-danger">Verifica Staff E/G 19/02/2018</a>
+                                      </div>
+                                    </div>
+                                    <div class="tab-pane fade" id="dieci" role="tabpanel" aria-labelledby="list-settings-list">
+                                      <div class="list-group">
+                                        <a href="https://docs.google.com/document/d/1KFgNpMpQHnEr23owyD_CSrlcmJxqQ3aHZ30ZGAazAfE/edit?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 06/03/2018</a>
+                                      </div>
+                                    </div>
+                                    <div class="tab-pane fade" id="undici" role="tabpanel" aria-labelledby="list-settings-list">
+                                      <div class="list-group">
+                                        <a href="https://docs.google.com/document/d/1pB5DnBSzDxHYXXpspQgyElH2834oXGz7EY_cHPhXBtQ/edit?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 12/03/2018</a>
+                                      </div>
+                                    </div>
+                                    <div class="tab-pane fade" id="dodici" role="tabpanel" aria-labelledby="list-settings-list">
+                                      <div class="list-group">
+                                        <a href="https://docs.google.com/document/d/1Gg6i5mPee4JWFarXjXLIse3d1x2q5tLNN4_xMSYHc5A/edit?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 19/03/2018</a>
+                                        <br><a href="https://drive.google.com/drive/folders/1VH8ocgZ7ihPb-dR1NwG-bNn5PiC2Uz_A?usp=sharing" class="list-group-item list-group-item-action list-group-item-dark">Cartella riflessione Malattie Spirituali</a>
+                                        <br><a href="https://drive.google.com/file/d/1ZRCRic_h8ZIRjxbkSy3KLgNHjB9g5pjQ/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-danger">Resoconto Malattie Spirituali</a>
+                                        <br><a href="https://drive.google.com/file/d/1KEMXaWzYkrYkUE-MWg9DR3Q7FMIp7OKv/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-danger">Riflessione Claudio</a>
+                                      </div>
+                                    </div>
+                                    <div class="tab-pane fade" id="tredici" role="tabpanel" aria-labelledby="list-settings-list">
+                                      <div class="list-group">
+                                        <a href="https://docs.google.com/document/d/1k7Py3J0BTRThAgDYJL5tOY45Dm8h4a-fuZrAQ6N6ZiM/edit?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 26/03/2018</a>
+                                      </div>
+                                    </div>
+                                    <div class="tab-pane fade" id="quattordici" role="tabpanel" aria-labelledby="list-settings-list">
+                                      <div class="list-group">
+                                        <a href="https://docs.google.com/document/d/1hpEpDDrYXmB7BhPO-Rdc4l4MHfY2A9VMks4PCJmfjVQ/edit?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 04/04/2018</a>
+                                      </div>
+                                    </div>
+                                    <div class="tab-pane fade" id="quindici" role="tabpanel" aria-labelledby="list-settings-list">
+                                      <div class="list-group">
+                                        <a href="https://docs.google.com/document/d/1Wy5Qev_XHcBhtTowgQg5pnkPPO8fp72PGNyBZVWIexQ/edit?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 16/04/2018</a>
+                                        <br><a href="https://drive.google.com/file/d/1hePHyyu3pgwtBV-zdNl4ObI_YTzzcPhT/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-danger">Formazioni Co.ca - Alta Squadriglia</a>
+                                      </div>
+                                    </div>
+                                    <div class="tab-pane fade" id="sedici" role="tabpanel" aria-labelledby="list-settings-list">
+                                      <div class="list-group">
+                                        <a href="https://docs.google.com/document/d/1KJhzpIu67kDp181ljNZAbVRgwiFp-n3seU9enDFnfYA/edit?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 23/04/2018</a>
+                                      </div>
+                                    </div>
+                                    <div class="tab-pane fade" id="diciasette" role="tabpanel" aria-labelledby="list-settings-list">
+                                      <div class="list-group">
+                                        <a href="https://docs.google.com/document/d/1qaMYwKyQEMMK2LJunpFmUZRgjyTBoO_N3b5sPfoug9w/edit?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 07/05/2018</a>
+                                      </div>
+                                    </div>
+                                    <div class="tab-pane fade" id="diciotto" role="tabpanel" aria-labelledby="list-settings-list">
+                                      <div class="list-group">
+                                        <a href="https://docs.google.com/document/d/108WPJhngJWoHOomzePhiL87HqGAVo_Sr4t1E5k6X0hw/edit?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 14/05/2018</a>
+                                      </div>
+                                    </div>
+                                    <div class="tab-pane fade" id="dicianove" role="tabpanel" aria-labelledby="list-settings-list">
+                                      <div class="list-group">
+                                        <a href="https://docs.google.com/document/d/1wbDXrtexyz-DaO8g5uHzYwcSSFrF9XaMeUGSRaK3s3Y/edit?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 28/05/2018</a>
+                                      </div>
+                                    </div>
+                                    <div class="tab-pane fade" id="venti" role="tabpanel" aria-labelledby="list-settings-list">
+                                      <div class="list-group">
+                                        <a href="https://docs.google.com/document/d/1EEuj1od9zHw0EfynF_DfZafSsgjvYbYfALQZmZxOTN0/edit?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 02/07/2018</a>
+                                      </div>
                                     </div>
                                 </div>
                                 </div>
@@ -111,7 +199,7 @@
                     </div>
         </div>
         
-        
+        <br><br><br>
         <div class="fixed-bottom d-inline p-2 bg-primary text-white">
                     <h6>Made with ❤ by Mangusta vivace</h6>            
         </div>
