--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                   <div class="alert alert-success" role="alert">
                       Guarda gli impegni di Comunità Capi sul nostro calendario <a href="Calendario/calendario.html" class="alert-link">Clicca qui</a>
                     </div>
+                  <h3>Cosa c'è di nuovo <span class="badge badge-primary">New</span></h3>
+                  <h6>Caricati i file Resoconto Riunione Co.ca 12/11/2018 <span class="badge badge-warning">New</span></h6>
                 </div>
             </div>
         </div>  
