--- a/Calendario/calendario.html
+++ b/Calendario/calendario.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="../Calendario/calendario.html">Calendario</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="../Resoconti/pagina_Resoconti.html">Reseconti</a>
+                      <a class="nav-link" href="../Resoconti/pagina_Resoconti.html">Resoconti</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -40,7 +40,8 @@
         <h1>Calendario Co.ca</h1>
         <br>
         <iframe src="https://calendar.google.com/calendar/embed?src=ro4sigqd4elmsonvgk1uqs83q8%40group.calendar.google.com&ctz=Europe%2FRome" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-              
+        
+        <br><br><br>
         <div class="fixed-bottom d-inline p-2 bg-primary text-white">
                     <h6>Made with ❤ by Mangusta vivace</h6>            
         </div>
