--- a/Informazioni/informazioni.html
+++ b/Informazioni/informazioni.html
@@ -10,7 +10,7 @@
 
     <body class="text-center">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html"><strong>Co.ca Archivio</strong></a>
+            <a class="navbar-brand" href="../index.html"><strong>Co.ca Archivio</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -24,7 +24,7 @@
                   <a class="nav-link" href="../Calendario/calendario.html">Calendario</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../Resoconti/pagina_Resoconti.html">Reseconti</a>
+                    <a class="nav-link" href="../Resoconti/pagina_Resoconti.html">Resoconti</a>
                   </li>
               </ul>
               <form class="form-inline my-2 my-lg-0">
@@ -58,6 +58,7 @@
             </div>
         </div>  
         
+        <br><br><br>
         <div class="fixed-bottom d-inline p-2 bg-primary text-white">
                     <h6>Made with ❤ by Mangusta vivace</h6>            
         </div>
