--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="Calendario/calendario.html">Calendario</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="Resoconti/pagina_Resoconti.html">Reseconti</a>
+                      <a class="nav-link" href="Resoconti/pagina_Resoconti.html">Resoconti</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -65,6 +65,7 @@
             </div>
         </div>  
         
+        <br><br><br>
         <div class="fixed-bottom d-inline p-2 bg-primary text-white">
                     <h6>Made with ❤ by Mangusta vivace</h6>            
         </div>
