--- a/Informazioni/informazioni.html
+++ b/Informazioni/informazioni.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Co.ca Roma 120 Archivio</title>
+    <title>Co.ca Roma 120 - Informazioni</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css"/>
