--- a/Resoconti/resoconti_2017_2018.html
+++ b/Resoconti/resoconti_2017_2018.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Co.ca Roma 120- Resoconti 2017-18</title>
+    <title>Co.ca Roma 120 - Resoconti 2017-18</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css"/>
@@ -75,7 +75,7 @@
                                     <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#diciasette" role="tab" aria-controls="settings">07/05/2018</a>
                                     <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#diciotto" role="tab" aria-controls="settings">14/05/2018</a>
                                     <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#dicianove" role="tab" aria-controls="settings">28/05/2018</a>
-                                    <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#venti" role="tab" aria-controls="settings">02/07/2018</a>
+                                    <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#venti" role="tab" aria-controls="settings"><div id="top">02/07/2018</div></a>
                                   </div>
                                 </div>
                                 <div class="col-8">
