--- a/Resoconti/resoconti_2017_2018.html
+++ b/Resoconti/resoconti_2017_2018.html
@@ -13,7 +13,7 @@
     <body class="text-center">
         <div class="sticky-top">
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="../index.html"><strong>Co.ca Archivio</strong></a>
+            <a class="navbar-brand" href="../index.html"><strong>Archivio Co.ca</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -75,7 +75,7 @@
                                     <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#diciasette" role="tab" aria-controls="settings">07/05/2018</a>
                                     <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#diciotto" role="tab" aria-controls="settings">14/05/2018</a>
                                     <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#dicianove" role="tab" aria-controls="settings">28/05/2018</a>
-                                    <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#venti" role="tab" aria-controls="settings"><div id="top">02/07/2018</div></a>
+                                    <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#venti" role="tab" aria-controls="settings">02/07/2018</a>
                                   </div>
                                 </div>
                                 <div class="col-8">
