--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body class="text-center">
         <div class="sticky-top">
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
-              <a class="navbar-brand" href="index.html"><strong>Co.ca Archivio</strong></a>
+              <a class="navbar-brand" href="index.html"><strong>Archivio Co.ca</strong></a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -60,7 +60,8 @@
                     </div>
                   <hr class="my-4">  <!-- Linea orizzontale divisoria -->
                   <h3>Cosa c'è di nuovo <span class="badge badge-primary">New</span></h3>
-                  <h6>Caricati i file Resoconto Riunione Co.ca 12/11/2018 <span class="badge badge-warning">New</span></h6>
+                  <h6>Caricati i file Resoconto Riunione Co.ca + Assemblea 18/11/2018 <span class="badge badge-warning">New</span></h6>
+                  <h6>Caricati i file Resoconto Riunione Co.ca 12/11/2018</h6>
                 </div>
             </div>
         </div>  
