--- a/Calendario/calendario.html
+++ b/Calendario/calendario.html
@@ -39,6 +39,20 @@
         <br>
         <h1>Calendario Co.ca</h1>
         <br>
+        <div class="container">
+          <div class="row">
+              <div class="col-sm">
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                  Se vuoi visualizzare il Calendario di Co.ca chiedi a <strong>Tommaso</strong> di aggiungerti!
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+              </div>
+          </div>
+        </div>
+        <br>
+
         <iframe src="https://calendar.google.com/calendar/embed?src=ro4sigqd4elmsonvgk1uqs83q8%40group.calendar.google.com&ctz=Europe%2FRome" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         
         <br><br><br>
