--- a/Resoconti/resoconti_2018_2019.html
+++ b/Resoconti/resoconti_2018_2019.html
@@ -96,7 +96,7 @@
                                     <div class="tab-pane fade" id="cinque" role="tabpanel" aria-labelledby="list-settings-list">
                                       <div class="list-group">
                                         <a href="https://docs.google.com/document/d/1dUsCVPm5CnKz4jQxcZM-iH5sBDZglc2NJRBO6exReos/edit?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 18/11/2018</a>
-                                        <br><a href="https://drive.google.com/file/d/1D-eckXxnuhVoEtU4gpGVB_8xN035c7KE/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto Assemblea di zona 18/11/2018</a>
+                                        <br><a href="https://drive.google.com/file/d/1D-eckXxnuhVoEtU4gpGVB_8xN035c7KE/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-danger">Resoconto Assemblea di zona 18/11/2018</a>
                                       </div>                                     
                                     </div>
 
