--- a/Resoconti/resoconti_2018_2019.html
+++ b/Resoconti/resoconti_2018_2019.html
@@ -61,6 +61,7 @@
                                     <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#tre" role="tab" aria-controls="messages">05/11/2018</a>
                                     <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#quattro" role="tab" aria-controls="settings">12/11/2018</a>
                                     <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#cinque" role="tab" aria-controls="settings">18/11/2018</a>
+                                    <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#sei" role="tab" aria-controls="settings">21/11/2018</a>
                                   </div>
                                 </div>
                                 <div class="col-8">
@@ -99,8 +100,12 @@
                                         <br><a href="https://drive.google.com/file/d/1D-eckXxnuhVoEtU4gpGVB_8xN035c7KE/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-danger">Resoconto Assemblea di zona 18/11/2018</a>
                                       </div>                                     
                                     </div>
-
-                                </div>
+                                    <div class="tab-pane fade" id="sei" role="tabpanel" aria-labelledby="list-settings-list">
+                                      <div class="list-group">
+                                        <a href="https://docs.google.com/document/d/1XZYpyG73_B6cvdKa83qIXeGv5bUGFb0ThTlWlmC5kA8/edit?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 21/11/2018</a>
+                                      </div>                                     
+                                    </div>
+                                  </div>
                                 </div>
                             </div>
                         </div>
