--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                     </div>
                   <hr class="my-4">  <!-- Linea orizzontale divisoria -->
                   <h3>Cosa c'è di nuovo <span class="badge badge-primary">New</span></h3>
-                  <h6>Caricati i file Resoconto Riunione Co.ca + Assemblea 18/11/2018 <span class="badge badge-warning">New</span></h6>
+                  <h6>Caricati i file Resoconto Pattuglia Natale 21/11/2018 <span class="badge badge-warning">New</span></h6>
+                  <h6>Caricati i file Resoconto Riunione Co.ca + Assemblea 18/11/2018</h6>
                   <h6>Caricati i file Resoconto Riunione Co.ca 12/11/2018</h6>
                 </div>
             </div>
