--- a/Resoconti/resoconti_2018_2019.html
+++ b/Resoconti/resoconti_2018_2019.html
@@ -102,7 +102,7 @@
                                     </div>
                                     <div class="tab-pane fade" id="sei" role="tabpanel" aria-labelledby="list-settings-list">
                                       <div class="list-group">
-                                        <a href="https://docs.google.com/document/d/1XZYpyG73_B6cvdKa83qIXeGv5bUGFb0ThTlWlmC5kA8/edit?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto 21/11/2018</a>
+                                        <a href="https://docs.google.com/document/d/1XZYpyG73_B6cvdKa83qIXeGv5bUGFb0ThTlWlmC5kA8/edit?usp=sharing" class="list-group-item list-group-item-action list-group-item-warning">Resoconto scritto Pattuglia Natale 21/11/2018</a>
                                       </div>                                     
                                     </div>
                                   </div>
